--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,7 +33,9 @@ body {
     max-height: 67rem;
     justify-content: center;
     align-items: center;
+    border-radius: 1rem;
     width:100%;
+    background-color: #e9dfb5;
   }
   
   .content-column {
